# RobotNav2

./: .gitignore  README.md  host.bash  my_map.pgm  my_map.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/lslidar_driver/launch/: lslidar_double_launch.py  lslidar_launch.py
src/lslidar_driver/params/: lsx10.yaml
src/map_build/: package.xml  setup.py
src/map_build/behavior_trees/: custom.xml  custom_omni.xml
src/map_build/config/: backpack_2d.lua  config.rviz  fishbot_laser_2d.lua  nav.yaml  nav2_OmniMotion.yaml  nav2_params.yaml  odom.lua  slam_params.yaml
src/map_build/launch/: build.launch.py  cartographer.launch.py  cartographer_localization.launch.py  direct.py  gazebo.py  gazebo_launch.py  gmap.launch.py  map_building.launch.py  navigation2_cartographer.launch.py  new.py  real.py  realttest.py  save_launch.py  slam_launch.py  tb3_simulation_launch.py  test.py  test_odom.launch.py  viltest.py
src/map_build/map_build/: dd.py  icp_fusion.py  imu.py  listen.py  move.py  nav_action.py  qrcode.py  robot_navigator.py  test.py  tmp.py
src/map_build/maps/: map.pgm  map.yaml  map1.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml
src/map_build/urdf/: default.urdf  new.urdf
src/map_build/worlds/: robot.sdf
src/mapbuild/: package.xml  setup.cfg  setup.py
src/mybot/: package.xml  setup.cfg  setup.py
src/nav/: package.xml  setup.py
src/nav/config/: map_server.yaml  planner_server.yaml
src/nav/launch/: locate.launch.py  map.launch.py
src/nav/map/: map.pgm
src/nav/urdf/: base.urdf
(+107 files in other folders)
