<?xml version="1.0"?>
<package format="3">
  <name>nav</name>
  <version>0.0.1</version>
  <description>Robot navigation using slam_toolbox and AMCL</description>

  <maintainer email="zerohzzzz0108@qq.com">zerohzzzz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>

  <!-- Optional: dependencies for other libraries, e.g. laserscan matcher, if you use them -->
  <depend>ros2_laser_scan_matcher</depend>

  <export>
    <!-- Export for use with Python -->
    <build_type>ament_python</build_type>
  </export>
</package>
